--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install-client": "cd frontend && npm install",
-    "build-client": "cd frontend && npm run build",
-    "start-client": "cd frontend && npm run dev",
-    "install-server": "cd backend && npm install",
-    "start-server": "cd backend && node index.js"
+    "install-client": "cd Frontend && npm install",
+    "build-client": "cd Frontend && npm run build",
+    "start-client": "cd Frontend && npm run dev",
+    "install-server": "cd Backend && npm install",
+    "start-server": "cd Backend && node index.js"
   },
   "keywords": [],
   "author": "",
